# fix-kestrel-overflow

./: .flake8  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  tox.ini
.github/workflows/: lint_test.yml  pypi_release.yml
fix_kestrel_overflow/: main.py
tests/: test_altitude_conversion.py
