[tool.poetry]
name = "fix-kestrel-overflow"
version = "0.1.0"
description = "Fix overflowing density altitude for the Kestrel DROP D3"
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/sco1/"
repository = "https://github.com/sco1/fix-kestrel-overflow"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
packages = [{include="fix_kestrel_overflow"}]

include = [
    {path = "./CHANGELOG.md", format = "sdist"}
]

[tool.poetry.scripts]
fixkestrel = "fix_kestrel_overflow.main:kestrel_cli"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.11"

[tool.poetry.dev-dependencies]
black = "^24.3"
bump2version = "^1.0"
flake8 = "^7.0"
flake8-annotations = "^3.0"
isort = "^5.12"
mypy = "^1.0"
pre-commit = "^3.0"
pytest = "^8.0"
pytest-check = "^2.1"
pytest-cov = "^5.0"
pytest-randomly = "^3.12"
ruff = "^0.3"
tox = "^4.4"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "fix-kestrel-overflow,tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
